# gst-plugins-bad

./: Makefile.am  configure.ac
ext/vp8/: Makefile.am  armv7.s  gstvp8dec.c  plugin.c
ext/vp8/gst/video/: gstbasevideoutils.c
gst-libs/gst/: Makefile.am
gst-libs/gst/basecamerabinsrc/: gstbasecamerasrc.c  gstbasecamerasrc.h
gst-libs/gst/camerasrc/: Makefile.am  README  gstbasecamerasrc.h  gstcamerabin-enum.c  gstcamerabin-enum.h
gst-libs/gst/video/: gstbasevideodecoder.c  gstbasevideoutils.h
gst/camerabin/: Makefile.am  camerabingeneral.c  camerabinimage.c  camerabinimage.h  camerabinvideo.c  camerabinvideo.h  gstcamerabin.c  gstcamerabin.h  gstcamerabincolorbalance.c  gstcamerabinphotography.c  gstv4l2camerasrc.c  gstv4l2camerasrc.h
gst/camerabin2/: Makefile.am  gstcamerabin2.c  gstomxcamerabinsrc.c  gstomxcamerabinsrc.h  gstplugin.c  gstviewfinderbin.c  gstwrappercamerabinsrc.c  gstwrappercamerabinsrc.h
gst/freeze/: gstfreeze.c  gstfreeze.h
gst/h264parse/: gsth264parse.c
gst/jpegformat/: gstjpegformat.h  gstjpegparse.c
gst/qtmux/: gstqtmux.c
tests/check/: Makefile.am
tests/check/elements/: camerabin2.c
tests/examples/: Makefile.am
tests/examples/camerabin2/: gst-camerabin2-test.c
